Added DebugJson configuration.

--- a/netcore10/src/redmine-netcore10-api/redmine-netcore10-api.csproj
+++ b/netcore10/src/redmine-netcore10-api/redmine-netcore10-api.csproj
@@ -9,6 +9,8 @@
     <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugJson|AnyCPU'" />
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="System.Collections.Specialized" Version="4.0.1" />
