Fix PackageIconUrl, remove unused references.

--- a/netcore10/src/netcore10/RedmineApi.Core.csproj
+++ b/netcore10/src/netcore10/RedmineApi.Core.csproj
@@ -9,16 +9,22 @@
     <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <Authors>Adrian Popescu</Authors>
     <Company />
-    <Copyright>Adrian Popescu 2016 - 2017</Copyright>
+    <Copyright>Copyright &#x00A9; Adrian Popescu.  All rights reserved.</Copyright>
     <PackageTags>Redmine, dotnet, api, c-sharp, csharp, c#</PackageTags>
     <Description>.Net API for Redmine bug/task management systems.</Description>
     <PackageProjectUrl>http://zapadi.github.io/redmine-net-api-github.io/</PackageProjectUrl>
-    <PackageIconUrl>https://github.com/zapadi/redmine-net-api/blob/master/logo.png</PackageIconUrl>
+    <PackageIconUrl>https://github.com/zapadi/redmine-net-api/raw/master/logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/zapadi/redmine-net-api</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/zapadi/redmine-net-api/blob/master/LICENSE</PackageLicenseUrl>
+  
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
+  
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugXml|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugJson|AnyCPU'" />
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugSymbols>false</DebugSymbols>
@@ -29,10 +35,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <!-- <PackageReference Include="Newtonsoft.Json" Version="9.0.1" /> -->
     <PackageReference Include="System.Collections.Specialized" Version="4.0.1" />
-    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.0.2" />
-    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.1.1" />
+    <!-- <PackageReference Include="System.Runtime.Serialization.Json" Version="4.0.2" />
+    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.1.1" /> -->
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.0.11" />
   </ItemGroup>
 
