Changed target to netstandard2.0 (#5)

--- a/netcore10/test/netcore10.tests/RedmineApi.Core.Tests.csproj
+++ b/netcore10/test/netcore10.tests/RedmineApi.Core.Tests.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>RedmineApi.Core.UnitTests</AssemblyName>
     <PackageId>redmine-netcore10-api.tests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion>
+    <!-- <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion> -->
     <RootNamespace>RedmineApi.Core.UnitTests</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugJson|AnyCPU'">
