--- a/netcore10/src/netcore10/RedmineApi.Core.csproj
+++ b/netcore10/src/netcore10/RedmineApi.Core.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>full</DebugType>
     <AssemblyName>RedmineApi.Core</AssemblyName>
     <PackageId>redmine-netcore10-api</PackageId>
-    <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion>
+    <!-- <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion> -->
   
     <Authors>Adrian Popescu</Authors>
     <Company />
