--- a/test/UnitTests/RedmineApi.Core.Tests.csproj
+++ b/test/UnitTests/RedmineApi.Core.Tests.csproj
@@ -1,30 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>RedmineApi.Core.UnitTests</AssemblyName>
     <PackageId>redmine-netcore10-api.tests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <!-- <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion> -->
-    <RootNamespace>RedmineApi.Core.UnitTests</RootNamespace>
+     <RootNamespace>RedmineApi.Core.UnitTests</RootNamespace>
   </PropertyGroup>
+  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugJson|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;DEBUGJSON;NETCOREAPP1_0;JSON</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DEBUGJSON;JSON</DefineConstants>
   </PropertyGroup>
+  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETCOREAPP1_0;XML;NETCOREAPP1_0</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;XML;NETCOREAPP1_0</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\RedmineApi.Core.csproj" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Zapadi.Redmine.Api.csproj" />
   </ItemGroup>
 </Project>
